# electionguard-core2

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Makefile  README.md  nuget.config  package-lock.json  package.json  tsconfig.json
libs/hacl/: CMakeLists.txt  Hacl_Bignum256.cpp  Hacl_Bignum256.hpp  Hacl_Bignum4096.cpp  Hacl_Bignum4096.hpp  Hacl_Bignum4096_32.cpp  Hacl_Bignum4096_32.hpp  Hacl_HMAC.cpp  Hacl_HMAC.hpp  Hacl_HMAC_DRBG.cpp  Hacl_HMAC_DRBG.hpp  Hacl_Streaming_SHA2.cpp  Hacl_Streaming_SHA2.hpp  Lib.cpp  Lib.hpp  config.cmake  config.msvc.cmake  sources.cmake
src/: CMakeLists.txt
src/electionGuardUI/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  electionGuardUI.csproj  electionGuardUI.sln
src/electionguard/: async.hpp  ballot.cpp  ballot_code.cpp  ballot_compact.cpp  chaum_pedersen.cpp  convert.cpp  convert.hpp  discrete_log.cpp  election.cpp  elgamal.cpp  encrypt.cpp  exception_handler.cpp  group.cpp  hash.cpp  hmac.cpp  log.cpp  log.hpp  lookup_table.hpp  manifest.cpp  nonces.cpp  precompute_buffers.cpp  random.cpp  random.hpp  serialize.hpp  sources.cmake  utils.hpp
src/electionguard-db/: docker-compose.db.yml  mongo-init.js
src/electionguard-ui/: .editorconfig  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Directory.Packages.props  ElectionGuard - Backup.UI.csproj  ElectionGuard.UI.csproj  ElectionGuard.UI.sln  GlobalUsings.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
src/electionguard-ui/ElectionGuard.UI/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  DbContext.cs  Directory.Packages.props  ElectionGuard.UI.csproj  GlobalUsings.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
src/electionguard-ui/ElectionGuard.UI.Lib/: Class1.cs  ElectionGuard.UI.Lib.csproj  GlobalUsings.cs
src/electionguard-ui/ElectionGuard.UI.Lib/Exceptions/: KeyCeremonyException.cs
src/electionguard-ui/ElectionGuard.UI.Lib/Extensions/: EnumerableExtensions.cs  ObservableCollectionExtension.cs  ServiceProviderExtension.cs
src/electionguard-ui/ElectionGuard.UI.Lib/Models/: BallotRecord.cs  BallotUpload.cs  BaseModel.cs  CeremonyDetails.cs  ChallengeRecord.cs  ChallengeResponseRecord.cs  ChallengedBallotRecord.cs  CiphertextTallyRecord.cs  ConstantsRecord.cs  ContestItem.cs  ContextRecord.cs  DatabaseRecord.cs  DecryptionShareRecord.cs  Election.cs  ElectionItem.cs  ElectionJointKey.cs  ElectionPartialKeyBackup.cs  ElectionPartialKeyVerification.cs  ElectionPublicKey.cs  EncryptedTallyRecord.cs  FileContent.cs  GuardianBackups.cs  GuardianPublicKey.cs  KeyCeremony.cs  KeyCeremonyRecord.cs  KeyCeremonyStatesEnum.cs  LagrangeCoefficientsRecord.cs  ManifestRecord.cs  MultiTallyRecord.cs  PlaintextSpoiledBallotRecord.cs  PlaintextTallyRecord.cs  ProofUsage.cs  SchnorrProof.cs  Tally.cs  TallyItem.cs  TallyJoinedRecord.cs  TallyRecord.cs  TallyStatesEnum.cs  User.cs
src/electionguard-ui/ElectionGuard.UI.Lib/Services/: BallotService.cs  BallotUploadService.cs  BaseDatabaseService.cs  CiphertextTallyService.cs  ConstantsService.cs  ContextService.cs  DbAvailabilityService.cs  DbService.cs  DriveService.cs  ElectionService.cs  GuardianBackupService.cs  GuardianPublicKeyService.cs  GuardianStorageExtensions.cs  IAuthenticationService.cs  IDatabaseService.cs  ILocalizationService.cs  INavigationService.cs  KeyCeremonyMediator.cs  KeyCeremonyService.cs  LagrangeCoefficientsService.cs  LocalizationService.cs  ManifestService.cs  ModelExtension.cs  PlaintextSpoiledBallotService.cs  PlaintextTallyService.cs  TallyService.cs  UserExtension.cs  VerificationService.cs
src/electionguard-ui/ElectionGuard.UI.Lib/ViewModels/: AdminHomeViewModel.cs  BaseViewModel.cs  CreateKeyCeremonyAdminViewModel.cs  ElectionViewModel.cs  GuardianHomeViewModel.cs  LoginViewModel.cs  SettingsViewModel.cs  ViewKeyCeremonyViewModel.cs
src/electionguard-ui/ElectionGuard.UI.Test/: .editorconfig  ElectionGuard.UI.Test.csproj  Usings.cs
src/electionguard-ui/ElectionGuard.UI.Test/Services/: DbAvailabilityServiceTest.cs
src/electionguard-ui/ElectionGuard.UI.Test/ViewModels/: AdminHomeViewModelTest.cs  CreateKeyCeremonyAdminViewModelTest.cs  TestBase.cs  ViewKeyCeremonyViewModelTest.cs
src/electionguard-ui/ElectionGuard.UI/Behaviors/: IntegerValidationBehavior.cs
src/electionguard-ui/ElectionGuard.UI/Controls/: ContestControl.xaml  ContestControl.xaml.cs  ExpanderControl.xaml  ExpanderControl.xaml.cs  (+6 more)
src/electionguard-ui/Helpers/: LocalizationResourceManager.cs  LocalizedString.cs  TranslateExtension.cs
src/electionguard-ui/Properties/: launchSettings.json
src/electionguard-ui/Resx/: AppResources.Designer.cs  AppResources.es.resx  AppResources.resx
src/electionguard-ui/ViewModels/: MainViewModel.cs
src/electionguard/facades/: Hacl_Bignum256.cpp  Hacl_Bignum256.hpp  Hacl_Bignum4096.cpp  Hacl_Bignum4096.hpp  ballot.cpp  ballot_compact.cpp  bignum256.hpp  bignum4096.cpp  bignum4096.hpp  chaum_pedersen.cpp  discrete_log.cpp  election.cpp  elgamal.cpp  encrypt.cpp  exception_handler.cpp  group.cpp  hash.cpp  manifest.cpp  nonces.cpp  polynomial.cpp  precompute_buffers.cpp
src/electionguard/wasm/: CMakeLists.txt  ballot.cpp  election.cpp  encrypt.cpp  group.cpp  manifest.cpp  precompute_buffers.cpp  sources.cmake
src/interop-generator/ElectionGuard.InteropGenerator/: EgInteropClasses.json  ElectionGuard.InteropGenerator.csproj  InteropGenerator.cs  Program.cs  README.md
test/: CMakeLists.txt
test/electionguard/: sources.cmake  test_ballot.c  test_chaum_pedersen.c  test_chaum_pedersen.cpp  test_constants.cpp  test_discrete_log.cpp  test_election.c  test_election.cpp  test_elgamal.c  test_elgamal.cpp  test_encrypt.c  test_encrypt.cpp  test_encrypt_compact.c  test_encrypt_compact.cpp  test_group.cpp  test_hacl.cpp  test_manifest.c  test_manifest.cpp
test/electionguard/benchmark/: bench_elgamal.cpp  bench_encrypt.cpp  bench_group.cpp  bench_hacl.cpp  bench_hashed_elgamal.cpp  bench_precompute.cpp
test/electionguard/generators/: ballot.hpp  election.hpp  manifest.h  manifest.hpp
(+649 files in other folders)
